--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.486.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1"
   },
